Errores sito inglés

--- a/equipo/index-eng.html
+++ b/equipo/index-eng.html
@@ -519,7 +519,7 @@
                             </div>
 
                             <p class="mobile colaborador-biografia" id="ariel">Ariel Alejandro López Aguilar was born in
-                                the city of Veracruz, Mexico. He estdudied the Mechatronic Engineering career on the
+                                the city of Veracruz, Mexico. He stdied the Mechatronic Engineering career on the
                                 Tecnológico de Monterrey. Now a day he is making his masters degree on Engineering
                                 Science. Among his interests are domotics, artificial intelligence and control systems.
                             </p>
@@ -549,8 +549,7 @@
                             <div class="colaborador-contacto">
                                 <h4 class="colaborador-contacto-titulo">Contact</h4>
                                 <div class="colaborador-contacto-enlaces">
-                                    <a href="mailto:jizquierdo.reyes@tec.mx"><img
-                                            src="../img/icons/icon-mail.svg"></a>
+                                    <a href="mailto:jizquierdo.reyes@tec.mx"><img src="../img/icons/icon-mail.svg"></a>
                                     <a href="https://www.researchgate.net/profile/Javier_Izquierdo-Reyes"
                                         target="_blank"><i class="fab fa-researchgate"></i></a>
                                 </div>
