--- a/proyectos/index-eng.html
+++ b/proyectos/index-eng.html
@@ -62,42 +62,42 @@
             <p>See Projects</p>
           </a>
         </div>
-        <p>The proyect Advanced Driver Monitoring for Assistance System (ADMAS) tries to develop a new driving asistance
-          service that works in an efficient way to a driver, depending on his/hers psycho-physical state.</p>
+        <p>Advanced Driver Monitoring for Asistance System (ADMAS) tries to develop a new driving asistance
+          service that works depending on the client´s psycho physical state.</p>
         <p>The system pretends to convert a Level 2 autonomous car, into a level 3 or 4, in other words, transforming a
-          common car into a semi-autonomous one. This will be achived by implemmenting sensors and artificial
+          common car into a semi autonomous one. This will be achieved by implementing sensors and artificial
           intelligence algorithms that take control of the vehicle when the driver is not able to drive safely.</p>
-        <p>To determine the psycho-physical state od the driver, the vehicle will have pre-isntalled biometric sensors
-          that will measure phisical variables to determine the health state, and the emotions that the driver presents.
+        <p>To determine the psycho physical state of the driver, the vehicle will have preinstalled biometric sensors
+          that will measure physical variables to determine the health state, and the emotions that the driver presents.
         </p>
         <p>The fusion of these sensors, will allow to determine if the vehicle should take the roll of the driver, in
-          case that the driver's actions are not propper to a safe driving, or when any mental or health state, seems to
+          case that the driver's actions are not proper to a safe driving, or when any mental or health state, seems to
           be affected.</p>
         <h3 class="subtitle">Development Areas</h3>
         <div class="areas-Investigación">
           <div> <b>Artificial Intelligence</b>
-            <p>In this area, projects for the creaton of artificial intelligence, simulators, vision systems, image
-              processing are developed with tools such as: Machine Learning, Computational Vision amonh others, with the
-              porpse of creating Intelligent Systems for vehicles.</p>
+            <p>In this area, projects for the creation of artificial intelligence, simulators, vision systems, image
+              processing are developed with tools such as: Machine Learning, Computational Vision among others, with the
+              purpose of creating Intelligent Systems for vehicles.</p>
           </div>
           <div> <b>Mechatronics</b>
             <p>Instrumentation projects for vehicles are used by means of mechatronic and control systems are developed.
-              The goal is to achive non-intrusive vehicle instrumentantion with the purpose of generating a small level
-              of system-modularity to allow almost any vehicle to be autonomous</p>
+              The goal is to achieve non intrusive vehicle instrumentation with the purpose of generating a small level
+              of system modularity to allow almost any vehicle to be autonomous</p>
           </div>
           <div> <b>Energy</b>
-            <p>Analysis and ingestigation of vehicle's energy improvment is done by means of combustion analysis,
-              renwable energies use, electrical vehicle, vehicle dynamic, reading and communications systems
+            <p>Analysis and investigation of vehicle's energy improvement is done by means of combustion analysis,
+              renewable energies use, electrical vehicle, vehicle dynamic, reading and communications systems
               improvement. By the use of the CAN network to improve the vehicle performance.</p>
           </div>
           <div> <b>Communication</b>
-            <p>A global-standared network made by autonomous vehicles is made in this area, this is done by
-              investigating, simulating and implimenting this systems. This is done to obtain and send critical and
-              non-critical data between vehicles.</p>
+            <p>A global standared network made by autonomous vehicles is made in this area, this is done by
+              investigating, simulating and implementing this systems. This is done to obtain and send critical and
+              non critical data between vehicles.</p>
           </div>
           <div> <b>Bioinstrumentation</b>
-            <p>This area focuses on the analysis and psico-physical variable adquisition, by means of the seat's
-              instrumentation, automovile's cabine and the driver itself. With these the emotional state, the activity,
+            <p>This area focuses on the analysis and psycho physical variable acquisition, by means of the seat's
+              instrumentation, automobile's cabin and the driver itself. With these the emotional state, the activity,
               and the driver's position can be assumed, and certain passive or active driving assistance systems are
               activated.</p>
           </div>
@@ -217,18 +217,18 @@
           </a>
         </div>
         <p>This projects seeks to develop and establish a liveable space, in which the emotions can be suggested by
-          means of ambiental variables and pre-programmed positive estimulation. </p>
-        <p>It uses a facial expresion's detection system, an electroencephalography system, that detects the brain's
-          electrical responeses and a device that measures the electric restistance of the user's skin, all of these
-          with the purpose of stablishing the phyhsiolocical and emocional state of the subject.</p>
-        <p>With the subject state, variations in the enviroment occur(temperature, humidity, light intensity and tone)
+          means of ambiental variables and pre programmed positive stimulation. </p>
+        <p>It uses a facial expression's detection system, an electroencephalography system, that detects the brain's
+          electrical responses and a device that measures the electric resistance of the user's skin, all of these
+          with the purpose of establishing the psychological and emotional state of the subject.</p>
+        <p>With the subject state, variations in the environment occur(temperature, humidity, light intensity and tone)
           to take the subject to a desire state. </p>
         <p>A good example is to try to transition between being angry or sad to being neutral or happy, these results
           could be applied in an office, to improve the employees life quality and therefore their health, and by
           improving these, the system could also improve their efficiency</p>
         <p>The research areas that have been involved in the project are: Mechatronics, Telecomunications and Electrical
-          Systems, Computer Science, Industrial Engeeniering, Biotechnology, Industrial Design, Architecture,
-          Psychology, Marketing, and Estadistics</p>
+          Systems, Computer Science, Industrial Engineering, Biotechnology, Industrial Design, Architecture,
+          Psychology, Marketing, and Stadistics</p>
         <h3 class="subtitle">Supervisors</h3>
         <div class="colaborador-wrapper">
           <div class="colaborador-tarjeta">
@@ -280,7 +280,7 @@
                 </div>
               </div>
               <p id="ariel" class="mobile colaborador-biografia">Ariel Alejandro López Aguilar was born in the city of
-                Veracruz, Mexico. He estdudied the Mechatronic Engineering career on the Tecnológico de Monterrey. Now a
+                Veracruz, Mexico. He studied the Mechatronic Engineering career on the Tecnológico de Monterrey. Now a
                 day he is making his masters degree on Engineering Science. Among his interests are domotics, artificial
                 intelligence and control systems.
               </p>
@@ -292,7 +292,7 @@
             </div>
           </div>
           <p class="desktop colaborador-biografia">Ariel Alejandro López Aguilar was born in the city of Veracruz,
-            Mexico. He estdudied the Mechatronic Engineering career on the Tecnológico de Monterrey. Now a day he is
+            Mexico. He studied the Mechatronic Engineering career on the Tecnológico de Monterrey. Now a day he is
             making his masters degree on Engineering Science. Among his interests are domotics, artificial intelligence
             and control systems.</p>
         </div>
@@ -371,7 +371,7 @@
                 Veracruz on 1965; He received the B.S. degree Electronic Instrumentation from Universidad Veracruzana,
                 Xalapa, Ver.; his master on Electronic and Telecommunications from CICESE, Ensenada, Baja California,
                 Mexico and his Ph. D. on ́ Telecommunications and Electronics from SEPI, Instituto Politenico Nacional.
-                His research interests are wireless networks, biomedical wearables devices, research on emotional states
+                His research interests are wireless networks, biomedical wearable devices, research on emotional states
                 and human computer interfaces with therapeutic applications.</p>
             </div>
             <div class="show-more-wrapper mobile">
@@ -384,7 +384,7 @@
             received the B.S. degree Electronic Instrumentation from Universidad Veracruzana, Xalapa, Ver.; his master
             on Electronic and Telecommunications from CICESE, Ensenada, Baja California, Mexico and his Ph. D. on ́
             Telecommunications and Electronics from SEPI, Instituto Politenico Nacional. His research interests are
-            wireless networks, biomedical wearables devices, research on emotional states and human computer interfaces
+            wireless networks, biomedical wearable devices, research on emotional states and human computer interfaces
             with therapeutic applications.</p>
         </div>
       </div>
@@ -394,14 +394,15 @@
     </div>
     <div id="AGR">
       <div class="col-7">
-        <p class="title">Acustic Agriculture</p>
+        <p class="title">Acuostic Agriculture</p>
         <div class="fader"></div>
       </div>
       <div class="info">
-        <p> The purpose of this project is to develop a space completely autonomous and isolated to study the vegetal
+        <p> The purpose of this project is to develop a space completely autonomous and isolated to study the vegetable
           growth, where environmental conditions could be measured constantly, and changed if needed to allow the growth
           of different plants. This system is a sustainable alternative to traditional agriculture, using acoustic
-          stimulation to speed up the growth and production of vegetal specimens, eradicating the need of pesticide and
+          stimulation to speed up the growth and production of vegetable specimens, eradicating the need of pesticide
+          and
           fertilizer, also reducing the amount of water used to irrigate the plant.</p>
         <p>The system analyzes the environment in which the specimen will be exposed, by means of one temperature and
           humidity sensor and two sensors to check the earths humidity. For its development, it regulates the light,
@@ -410,10 +411,10 @@
           recording.</p>
         <p>From this results, a comparison between a control specimen, one that has not been affected by any means; and
           the acoustic stimulated, to see the effect, either positive or negative, on growth rate and production. This
-          is done to determine which conditions are better for the specimen, therefor more production, leading to more
+          is done to determine which conditions are better for the specimen, therefore more production, leading to more
           earnings in the same amount of time.</p>
-        <p>This is a multi-discplinary project, with the integration of different areas to get a better result. Until
-          now students of the careers of Biothecnology, Telecomunications and Electronic Systems, Mechatronics,
+        <p>This is a multidiscplinary project, with the integration of different areas to get a better result. Until
+          now students of the careers of Biotechnology, Telecomunications and Electronic Systems, Mechatronics,
           Computers Science, Industrial Design, have participated. </p>
         <h3 class="subtitle">Developer</h3>
         <div class="colaborador-wrapper">
@@ -432,7 +433,7 @@
               <p id="max" class="mobile colaborador-biografia"> Maximiliano Castellanos Andrade was born in Tamaulipas,
                 Mexico on April 9th, 1997. He studies Biotechnology in “Instituto Tecnológico y de Estudios Superiores
                 de Monterrey”. Currently he is working in development project in the center of microsystems and
-                bio-design center. His interest areas are agronomy, tissue harvest and microbiology.</p>
+                biodesign center. His interest areas are agronomy, tissue harvest and microbiology.</p>
             </div>
             <div class="show-more-wrapper mobile">
               <div data-colaborador="max" class="show-more-button">Read More<img
@@ -442,7 +443,7 @@
           </div>
           <p class="desktop colaborador-biografia">Maximiliano Castellanos Andrade was born in Tamaulipas, Mexico on
             April 9th, 1997. He studies Biotechnology in “Instituto Tecnológico y de Estudios Superiores de Monterrey”.
-            Currently he is working in development project in the center of microsystems and bio-design center. His
+            Currently he is working in development project in the center of microsystems and biodesign center. His
             interest areas are agronomy, tissue harvest and microbiology.</p>
         </div>
         <h3 class="subtitle">Supervisor</h3> <a href="../contacto/index.html">Dr. Rogelio Bustamente Bello</a>
@@ -454,7 +455,7 @@
         <div class="fader"></div>
       </div>
       <div class="info">
-        <p> The project seeks to develop a platform for an all-terrain vehicle, fully electric and instrumented. Looking
+        <p> The project seeks to develop a platform for an all terrain vehicle, fully electric and instrumented. Looking
           for the application of intelligent algorithms and fusion of sensors for processing and with them generating
           security systems for driving assistance, such as staying in the lane in case of pilot distraction, emergency
           braking, heading correction, identification of pedestrians , cars and other objects using artificial vision.
@@ -530,7 +531,7 @@
 
 
 
-          <!-- DUMMIED OUT UNTIL DEVELOPER OR CONTRIBUTORS ADDED -->
+        <!-- DUMMIED OUT UNTIL DEVELOPER OR CONTRIBUTORS ADDED -->
         <!-- <h3 class="subtitle">Developer</h3>
         <div class="colaborador-wrapper">
           <div class="colaborador-tarjeta">
